--- a/source/pages/[...locale]/index.astro
+++ b/source/pages/[...locale]/index.astro
@@ -1,7 +1,9 @@
 ---
 import Page from "@app/layouts/page.astro";
+
 import About from "@app/components/sections/about.astro";
 import Experience from "@app/components/sections/experience.astro";
+import Projects from "@app/components/sections/projects.astro";
 
 import { getLocalizedStaticPaths } from "@app/modules/i18n/lib/locales";
 import type { GetStaticPaths } from "astro";
@@ -14,8 +16,8 @@ export const getStaticPaths = getLocalizedStaticPaths satisfies GetStaticPaths;
     <About />
     <Experience />
 
-    <!-- <hr class="my-2 border-border" />
     <Projects />
+    <!--
     <hr class="my-2 border-border" />
     <Skills />
     <hr class="my-2 border-border" />
