--- a/source/components/project-card.astro
+++ b/source/components/project-card.astro
@@ -3,13 +3,15 @@ import type { ImageMetadata } from "astro";
 import { Icon } from "astro-icon/components";
 import type { HTMLAttributes } from "astro/types";
 import { Image } from "astro:assets";
+import type { Skill } from "@app/lib/data/skills";
 import Card from "./base/card.astro";
 import Link from "./base/link.astro";
+import SkillBadge from "./skill-badge.astro";
 /* import SkillBadge from "./skill-badge.astro";
  */
 export type Props = Omit<HTMLAttributes<"article">, "slot"> & {
   title: string;
-  relatedSkills: string[];
+  relatedSkills: Skill[];
   description: string;
   image: ImageMetadata;
 
@@ -80,7 +82,6 @@ const {
     <span>{description}</span>
   </p>
   <footer class="mt-4 flex gap-2">
-    <!--     {relatedSkills.map((skill) => <SkillBadge skill={skill} />)}
- -->
+    {relatedSkills.map((skill) => <SkillBadge skill={skill} />)}
   </footer>
 </Card>
