--- a/source/layouts/page.astro
+++ b/source/layouts/page.astro
@@ -5,6 +5,8 @@ import Footer from "@app/layouts/footer.astro";
 
 import ScrollToTop from "@app/components/scroll-to-top.astro";
 import SocialsSidelist from "@app/components/social-sidelist.astro";
+/* import { Hero } from "@app/modules/three-fiber/components/hero";
+ */
 ---
 
 <Base>
@@ -21,6 +23,8 @@ import SocialsSidelist from "@app/components/social-sidelist.astro";
       <slot name="main" />
     </main>
 
+    <!--     <Hero client:load />
+ -->
     <ScrollToTop class="fixed bottom-0 right-0 m-12" />
 
     <Footer />
