--- a/source/components/sections/experience.astro
+++ b/source/components/sections/experience.astro
@@ -21,7 +21,7 @@ const formatter = new Intl.DateTimeFormat(locale, {
 <ObservedSection
   id={t.id}
   order={1}
-  class="z-10 flex w-full flex-col items-center px-8 py-6 sm:container sm:mx-auto sm:py-6"
+  class="flex w-full flex-col items-center px-8 py-6 sm:container sm:mx-auto sm:py-6"
 >
   <h2 class="relative mb-16 text-left">
     <span class="font-mono text-xl font-semibold tabular-nums lg:text-3xl"
@@ -48,12 +48,12 @@ const formatter = new Intl.DateTimeFormat(locale, {
         return (
           <TimelineEntry
             index={index + 1}
-            class="ease z-2 transition-opacity duration-300"
+            class="ease transition-opacity duration-300"
           >
             <article class="group relative flex max-w-screen-lg flex-col p-4 lg:max-w-screen-lg">
               <div
                 class:list={[
-                  "absolute -inset-x-4 -inset-y-4 -z-10 hidden rounded-lg transition",
+                  "absolute -inset-x-4 -inset-y-4 hidden rounded-lg transition",
                   "lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50 lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg",
                 ]}
               />
