--- a/source/components/sections/experience.astro
+++ b/source/components/sections/experience.astro
@@ -7,6 +7,7 @@ import Link from "@app/components/base/link.astro";
 import SkillBadge from "@app/components/skill-badge.astro";
 
 import { experience } from "@app/lib/data/experience";
+import { ExperienceIsland } from "@app/components/three/islands/experience";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.experience;
@@ -21,9 +22,9 @@ const formatter = new Intl.DateTimeFormat(locale, {
 <ObservedSection
   id={t.id}
   order={1}
-  class="flex w-full flex-col items-center px-8 py-6 sm:container sm:mx-auto sm:py-6"
+  class="relative flex w-full flex-col items-center gap-24 px-12 py-6"
 >
-  <h2 class="relative mb-16 text-left">
+  <h2 class="mb-16 w-fit text-left">
     <span class="font-mono text-xl font-semibold tabular-nums lg:text-3xl"
       >01.</span
     >
@@ -34,81 +35,86 @@ const formatter = new Intl.DateTimeFormat(locale, {
     </span>
   </h2>
 
-  <Timeline
-    itemCount={2}
-    client:idle
-    class=""
-  >
-    {
-      experience.map((job, index) => {
-        const { startDate, endDate } = job;
-        const start = formatter.format(startDate);
-        const end = formatter.format(endDate);
+  <div class="flex w-4/6">
+    <Timeline
+      itemCount={2}
+      client:idle
+    >
+      {
+        experience.map((job, index) => {
+          const { startDate, endDate } = job;
+          const start = formatter.format(startDate);
+          const end = formatter.format(endDate);
 
-        return (
-          <TimelineEntry
-            index={index + 1}
-            class="ease transition-opacity duration-300"
-          >
-            <article class="group relative flex max-w-screen-lg flex-col p-4 lg:max-w-screen-lg">
-              <div
-                class:list={[
-                  "absolute -inset-x-4 -inset-y-4 hidden rounded-lg transition",
-                  "lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50 lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg",
-                ]}
-              />
+          return (
+            <TimelineEntry
+              index={index + 1}
+              class="ease transition-opacity duration-300"
+            >
+              <article class="group relative flex max-w-screen-lg flex-col p-4 lg:max-w-screen-lg">
+                <div
+                  class:list={[
+                    "absolute -inset-x-4 -inset-y-4 -z-[1] hidden rounded-lg transition",
+                    "lg:-inset-x-6 lg:block lg:group-hover:bg-slate-800/50 lg:group-hover:shadow-[inset_0_1px_0_0_rgba(148,163,184,0.1)] lg:group-hover:drop-shadow-lg",
+                  ]}
+                />
 
-              <header class="mb-8 space-y-3">
-                <h3 class="font-sans-header text-lg font-black transition duration-200 sm:text-xl lg:text-2xl lg:group-hover:text-azure-600">
-                  <Link
-                    href={job.url}
-                    label={`${job.title} at ${job.at} (opens in a new tab)`}
-                    targetBlank
-                    withExternalLinkArrow
-                  >
-                    <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded-lg md:-inset-x-6 md:-inset-y-4 lg:block" />
+                <header class="mb-8 space-y-3">
+                  <h3 class="font-sans-header text-lg font-black transition duration-200 sm:text-xl lg:text-2xl lg:group-hover:text-azure-600">
+                    <Link
+                      href={job.url}
+                      label={`${job.title} at ${job.at} (opens in a new tab)`}
+                      targetBlank
+                      withExternalLinkArrow
+                    >
+                      <span class="absolute -inset-x-4 -inset-y-2.5 hidden rounded-lg md:-inset-x-6 md:-inset-y-4 lg:block" />
 
-                    <span>
-                      {job.title} · {job.at}
+                      <span>
+                        {job.title} · {job.at}
+                      </span>
+                    </Link>
+                  </h3>
+
+                  <div class="text-base font-semibold text-muted-foreground/70 transition-colors duration-200 sm:text-lg lg:text-xl">
+                    <span>{job.location}</span>
+                    <span class="opacity-60">|</span>
+                    <span aria-label="">
+                      <time
+                        datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
+                      >
+                        {start}
+                      </time>
+                      -
+                      <time
+                        datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
+                      >
+                        {end}
+                      </time>
                     </span>
-                  </Link>
-                </h3>
+                  </div>
+                </header>
 
-                <div class="text-base font-semibold text-muted-foreground/70 transition-colors duration-200 sm:text-lg lg:text-xl">
-                  <span>{job.location}</span>
-                  <span class="opacity-60">|</span>
-                  <span aria-label="">
-                    <time
-                      datetime={`${startDate.getFullYear()}-${startDate.getMonth() + 1}`}
-                    >
-                      {start}
-                    </time>{" "}
-                    -
-                    <time
-                      datetime={`${endDate.getFullYear()}-${endDate.getMonth() + 1}`}
-                    >
-                      {end}
-                    </time>
-                  </span>
-                </div>
-              </header>
+                <p
+                  class="job-description max-w-[800px] whitespace-pre-line text-pretty text-base text-foreground/80 lg:text-lg"
+                  set:html={job.description}
+                />
 
-              <p
-                class="job-description max-w-[800px] whitespace-pre-line text-pretty text-base text-foreground/80 lg:text-lg"
-                set:html={job.description}
-              />
+                <footer class="mt-10 flex gap-2">
+                  {job.skills.map((skill) => (
+                    <SkillBadge skill={skill} />
+                  ))}
+                </footer>
+              </article>
+            </TimelineEntry>
+          );
+        })
+      }
+    </Timeline>
 
-              <footer class="mt-10 flex gap-2">
-                {job.skills.map((skill) => (
-                  <SkillBadge skill={skill} />
-                ))}
-              </footer>
-            </article>
-          </TimelineEntry>
-        );
-      })
-    }
-  </Timeline>
+    <div class="w-1/3">
+      <ExperienceIsland client:load />
+    </div>
+  </div>
 </ObservedSection>
 
 <style>
