--- a/source/components/sections/skills.astro
+++ b/source/components/sections/skills.astro
@@ -2,16 +2,19 @@
 /* import { skills } from "@app/lib/data/skills";
 import SkillCard from "@app/components/skill-card.astro"; */
 import { getTranslations } from "@app/modules/i18n/lib/translations";
+import { SkillsIsland } from "@app/components/three/islands/skills";
+import ObservedSection from "@app/layouts/observed-section.astro";
 
 const translations = getTranslations(Astro.locals.locale);
 const t = translations.sections.skills;
 ---
 
-<section
+<ObservedSection
   id={t.id}
-  class="container mx-auto flex w-full flex-col items-center p-12"
+  order={2}
+  class="container relative mx-auto flex w-full flex-col items-center p-12"
 >
-  <h2 class="mb-16 text-6xl font-bold">{t.title}</h2>
+  <h2 class="sticky mb-16 text-6xl font-bold">{t.title}</h2>
 
   <!-- <div class="flex flex-col-reverse items-center justify-center gap-8">
     <div class="grid grid-cols-4 gap-4">
@@ -25,6 +28,10 @@ const t = translations.sections.skills;
       }
     </div>
   </div> -->
+
+  <div class="size-96">
+    <SkillsIsland client:idle />
+  </div>
 
   <h3 class="text-3xl font-medium">Games</h3>
 
@@ -68,4 +75,4 @@ const t = translations.sections.skills;
     <li>Docker</li>
     <li>HTML/CSS</li>
   </ul>
-</section>
+</ObservedSection>
