--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -34,13 +34,13 @@
 
 html {
   width: 100%;
-  height: 100%;
-
-  /** If supported this will be applied. */
-  height: 100dvh;
+  height: auto;
 
   scrollbar-gutter: stable;
-  scroll-behavior: smooth;
+}
+
+html.lenis body {
+  height: auto;
 }
 
 body {
@@ -48,6 +48,22 @@ body {
 
   min-height: 100%;
   min-height: 100dvh;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+.lenis.lenis-stopped {
+  overflow: hidden;
+}
+
+.lenis.lenis-scrolling iframe {
+  pointer-events: none;
 }
 
 strong {
