--- a/source/styles/index.css
+++ b/source/styles/index.css
@@ -27,7 +27,9 @@
   --scrollbar-thumb-radius: theme("borderRadius.full");
 }
 
-* {
+*,
+*::before,
+*::after {
   -webkit-tap-highlight-color: transparent;
   box-sizing: border-box;
 }
