--- a/source/layouts/base.astro
+++ b/source/layouts/base.astro
@@ -37,7 +37,7 @@ import "tippy.js/dist/tippy.css";
   </head>
 
   <body
-    class="debug-screens relative overflow-x-hidden bg-background font-sans text-foreground antialiased"
+    class="debug-screens overflow-x-clip bg-background font-sans text-foreground antialiased"
   >
     <slot name="body" />
   </body>
