--- a/source/layouts/footer.astro
+++ b/source/layouts/footer.astro
@@ -6,7 +6,7 @@ import { Icon } from "astro-icon/components";
   <p class="text-balance text-center text-base font-semibold md:text-lg">
     <span> Designed and implemented with </span>
     <Icon
-      class="mx-px mb-px inline animate-beat"
+      class="animate-beat mx-px mb-px inline"
       name="heart"
       aria-label="love"
     />
