--- a/source/components/base/input.astro
+++ b/source/components/base/input.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/lib/helpers/style";
+import { cn } from "@app/utils";
 import type { HTMLAttributes } from "astro/types";
 
 type InputProps = HTMLAttributes<"input"> & { multiline?: never };
