--- a/source/layouts/header.astro
+++ b/source/layouts/header.astro
@@ -13,19 +13,19 @@ const t = translations.sections;
 
 <header
   class:list={[
-    "sticky inset-x-0 top-0 isolate z-[1] h-header w-full bg-background",
+    "h-header sticky inset-x-0 top-0 isolate z-[1] w-full bg-background",
     "lg:h-header",
   ]}
 >
   <nav
     class:list={[
-      "pointer-events-none inset-x-0 flex min-h-header w-full flex-col items-center justify-start overflow-hidden border-b border-border bg-background/85",
-      "lg:container lg:pointer-events-auto lg:static lg:mx-auto lg:h-header lg:flex-row lg:justify-between lg:px-8",
+      "min-h-header pointer-events-none inset-x-0 flex w-full flex-col items-center justify-start overflow-hidden border-b border-border bg-background/85",
+      "lg:h-header lg:container lg:pointer-events-auto lg:static lg:mx-auto lg:flex-row lg:justify-between lg:px-8",
     ]}
   >
     <div
       class:list={[
-        "flex min-h-header w-full items-center justify-between gap-2 px-8",
+        "min-h-header flex w-full items-center justify-between gap-2 px-8",
         "sm:container sm:mx-auto",
         "lg:container-none lg:mx-0 lg:w-1/6 lg:justify-start lg:px-0",
       ]}
