--- a/source/modules/navigation/components/hamburguer.astro
+++ b/source/modules/navigation/components/hamburguer.astro
@@ -1,5 +1,5 @@
 ---
-import { cn } from "@app/lib/helpers/style";
+import { cn } from "@app/utils";
 import type { HTMLAttributes } from "astro/types";
 
 export type Props = HTMLAttributes<"button">;
